--- a/Frontend/Frontend/Frontend/MainWindow.xaml
+++ b/Frontend/Frontend/Frontend/MainWindow.xaml
@@ -5,8 +5,13 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Frontend"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
-    <Grid>
+        Title="MainWindow" Height="1000" Width="1000">
+    
+        <Canvas >
+            <Button Width="300" Height="40" Canvas.Top= "350" Canvas.Left="850">Iniciar sesion</Button>
+            <Button Width="300" Height="40" Canvas.Top= "500" Canvas.Left="850">Registrarse</Button>
+        </Canvas>
+      
 
-    </Grid>
+    
 </Window>
