--- a/Frontend/Trabajo/Trabajo/App.xaml
+++ b/Frontend/Trabajo/Trabajo/App.xaml
@@ -2,7 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:Trabajo"
-             StartupUri="MainWindow.xaml">
+             StartupUri="principal.xaml">
     <Application.Resources>
          
     </Application.Resources>
