--- a/Frontend/Trabajo/Trabajo/Register.xaml
+++ b/Frontend/Trabajo/Trabajo/Register.xaml
@@ -1,12 +1,12 @@
-﻿<Window x:Class="Trabajo.MainWindow"
+﻿<Window x:Class="Trabajo.Register"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Trabajo"
-        WindowState="Maximized"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        WindowState="Maximized"
+        Title="Register" Height="450" Width="800">
     <Grid>
         <Image Stretch="Fill" Source = "https://cdn2.actitudfem.com/media/files/styles/16x9_large/public/images/2020/05/servicios-de-streaming-gratis.jpg"></Image>
         <Grid>
@@ -37,7 +37,7 @@
                             </LinearGradientBrush.GradientStops>
                         </LinearGradientBrush>
                     </StackPanel.Background>
-                    <Label Content = "Log in" FontSize="50" HorizontalAlignment="Center" Margin="0, 100, 0, 0"   Foreground="#596CFA" FontWeight="Bold">
+                    <Label Content = "Registro" FontSize="50" HorizontalAlignment="Center" Margin="0, 50, 0, 0"   Foreground="#596CFA" FontWeight="Bold">
                         <Label.Effect>
                             <DropShadowEffect
                                 ShadowDepth="4"
@@ -45,7 +45,7 @@
                                 Color="Black"
                                 Opacity="0.5"
                                 BlurRadius="4">
-                             </DropShadowEffect>
+                            </DropShadowEffect>
                         </Label.Effect>
                     </Label>
 
@@ -53,9 +53,41 @@
                         <TextBox.Resources>
                             <Style TargetType="{x:Type Border}">
                                 <Setter Property="CornerRadius" Value="22"/>
-                                
+
                             </Style>
-                            </TextBox.Resources>
+                        </TextBox.Resources>
+                        <TextBox.Effect>
+                            <DropShadowEffect
+                                 ShadowDepth="4"
+                                 Direction="330"
+                                 Color="#222"
+                                 Opacity="0.6"
+                                 BlurRadius="9"/>
+                        </TextBox.Effect>
+                    </TextBox>
+                    <TextBox Name="emailBox" Height="56" Width="340" FontSize="20"  Margin = "0, 10, 0, 10" Padding="10" Foreground="#fff" FontWeight="Bold" Background="#82abff">
+                        <TextBox.Resources>
+                            <Style TargetType="{x:Type Border}">
+                                <Setter Property="CornerRadius" Value="22"/>
+
+                            </Style>
+                        </TextBox.Resources>
+                        <TextBox.Effect>
+                            <DropShadowEffect
+                                 ShadowDepth="4"
+                                 Direction="330"
+                                 Color="#222"
+                                 Opacity="0.6"
+                                 BlurRadius="9"/>
+                        </TextBox.Effect>
+                    </TextBox>
+                    <TextBox Name="passBox" Height="56" Width="340" FontSize="20"  Margin = "0, 10, 0, 10" Padding="10" Foreground="#fff" FontWeight="Bold" Background="#82abff">
+                        <TextBox.Resources>
+                            <Style TargetType="{x:Type Border}">
+                                <Setter Property="CornerRadius" Value="22"/>
+
+                            </Style>
+                        </TextBox.Resources>
                         <TextBox.Effect>
                             <DropShadowEffect
                                  ShadowDepth="4"
@@ -67,7 +99,7 @@
                     </TextBox>
 
 
-                    <TextBox Name="passBox" Height="56" Width="340" FontSize="20" Padding="10" Foreground="#fff" FontWeight="Bold" Background="#82abff">
+                    <TextBox Name="rePassBox" Height="56" Width="340" FontSize="20" Padding="10" Foreground="#fff" Margin = "0, 10, 0, 10" FontWeight="Bold" Background="#82abff">
                         <TextBox.Resources>
                             <Style TargetType="{x:Type Border}">
                                 <Setter Property="CornerRadius" Value="22"/>
@@ -83,7 +115,7 @@
                         </TextBox.Effect>
                     </TextBox>
 
-                    <Button Margin = "0, 20, 0, 0" Width="170" FontSize="20"  FontWeight="Bold"  Foreground="#fff" Background="#596CFA">Login
+                    <Button Margin = "0, 20, 0, 0" Width="170" FontSize="20"  FontWeight="Bold"  Foreground="#fff" Background="#596CFA" Click="mostrarPantallaLogin">Registrarse
                         <Button.Resources>
                             <Style TargetType="Border">
                                 <Setter Property= "CornerRadius" Value= "22"/>
@@ -96,17 +128,16 @@
                                  Color="#222"
                                  Opacity="0.6"
                                  BlurRadius="9">
-                                
+
                             </DropShadowEffect>
                         </Button.Effect>
                     </Button>
 
 
-                    <TextBlock Text="¿No tienes cuenta? " TextAlignment="Left" Margin = "0, 100, 0,0 " FontSize="25" Foreground="#fff" HorizontalAlignment="Center" Padding="10">
-                    <Hyperlink Hyperlink.Click="mostrarPantallaRegister" TextDecorations="none" >Registrarse</Hyperlink>
-                    </TextBlock>
+                    
 
-                 </StackPanel>
+
+                </StackPanel>
             </Border>
         </Grid>
 
