--- a/Frontend/Trabajo/Trabajo/Detalles.xaml
+++ b/Frontend/Trabajo/Trabajo/Detalles.xaml
@@ -5,54 +5,136 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Trabajo"
         mc:Ignorable="d"
-        Title="Detalles" Height="450" Width="800">
+        Title="Detalles" Height="1032" Width="1567" StateChanged="Window_StateChanged">
     <Grid>
         <Grid.RowDefinitions>
-                <RowDefinition Height="10*"/>
-                <RowDefinition Height="90*"/>
-            </Grid.RowDefinitions>
-            <WrapPanel Background="Red">
-                <TextBlock Text="LOGO" FontSize="40" Margin="10,10,20,0" FontWeight="Bold"/>
-                <TextBlock Text="Inicio"  Margin="10,10,10,0"/>
-                <TextBlock Text="Peliculas" Margin="10,10,10,0"/>
-                <TextBlock Text="Series" Margin="10,10,20,0"/>
-                <TextBox Text="buscar" Height="20" Width="200" Margin="250,0,0,0"/>
-            </WrapPanel>
+            <RowDefinition Height="10*"/>
+            <RowDefinition x:Name="info" Height="90*"/>
+        </Grid.RowDefinitions>
+        <WrapPanel Background="Red">
+            <TextBlock Text="LOGO" FontSize="40" Margin="10,10,20,0" FontWeight="Bold" VerticalAlignment="Bottom"/>
+            <TextBlock Text="Inicio"  Margin="10,10,10,0" VerticalAlignment="Bottom"/>
+            <TextBlock Text="Peliculas" Margin="10,10,10,0" VerticalAlignment="Bottom"/>
+            <TextBlock Text="Series" Margin="10,10,20,0" VerticalAlignment="Bottom"/>
+            <TextBox Text="buscar" Height="20" Width="200" VerticalAlignment="Bottom" HorizontalAlignment="Right"/>
+        </WrapPanel>
         <ScrollViewer  Grid.Row="1" VerticalScrollBarVisibility="Hidden" HorizontalScrollBarVisibility="Disabled">
             <Grid>
                 <Grid.RowDefinitions>
-                    <RowDefinition Height="350"/>
+                    <RowDefinition x:Name="tamañoimg"  Height="350"/>
                     <RowDefinition Height="20*"/>
                 </Grid.RowDefinitions>
 
-                <Image Source="https://wallpapersmug.com/download/1600x900/cce793/movie-poster-of-john-wick-3.jpg" Stretch="UniformToFill"/>
+                <Image Source="https://img.aullidos.com/imagenes/noticias/tw-36134.jpg" Stretch="UniformToFill"/>
                 <Grid>
                     <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="60*"/>
                         <ColumnDefinition Width="40*"/>
+                        <ColumnDefinition Width="60*"/>
                     </Grid.ColumnDefinitions>
-                    <StackPanel  Margin="10,0,0,0" VerticalAlignment="Bottom" Background="#99000000" >
-                        <WrapPanel>
-                            <TextBlock Text="TITULO JOHN WICK" FontSize="40" FontWeight="Bold" Foreground="White"/>
-                            <TextBlock Text="8.0" FontSize="35" FontWeight="Bold" Foreground="White" Margin="20,0,0,0" VerticalAlignment="Bottom"/>
-                        </WrapPanel>
-                        <WrapPanel>
-                            <TextBlock Text="2019" FontSize="15" FontWeight="Bold" Foreground="White" Margin="0,10,0,5"/>
-                            <TextBlock Text="duracion: 1:45:00 " FontSize="15" FontWeight="Bold" Foreground="White" Margin="10,10,0,5"/>
-                        </WrapPanel>
-                        <TextBlock Text="En este nuevo capítulo que continúa el éxito de 2014,el legendario sicario John Wick (Keanu Reeves) se ve forzado a abandonar su retiro por un antiguo socio que trama con el control de una siniestra cofradía internacional de asesinosObligado a ayudar por un juramento de sangre, John viaja a Romadonde se enfrentará a algunos de los asesinos más letales del mundo."  
+                    <Border CornerRadius="5" Background="#99000000" Grid.Column="0" Margin="5" VerticalAlignment="Bottom" >
+                        <StackPanel  Margin="5">
+                            <WrapPanel>
+                                <TextBlock x:Name="titulo" Text="TITULO JOHN WICK" FontSize="40" FontWeight="Bold" Foreground="White"/>
+                                <TextBlock Text="8.0" FontSize="35" FontWeight="Bold" Foreground="White" Margin="20,0,0,0" VerticalAlignment="Bottom"/>
+                            </WrapPanel>
+                            <WrapPanel>
+                                <TextBlock Text="2019" FontSize="15" FontWeight="Bold" Foreground="White" Margin="0,10,0,5"/>
+                                <TextBlock Text="duracion: 1:45:00 " FontSize="15" FontWeight="Bold" Foreground="White" Margin="10,10,0,5"/>
+                            </WrapPanel>
+                            <TextBlock Text="En este nuevo capítulo que continúa el éxito de 2014,el legendario sicario John Wick (Keanu Reeves) se ve forzado a abandonar su retiro por un antiguo socio que trama con el control de una siniestra cofradía internacional de asesinosObligado a ayudar por un juramento de sangre, John viaja a Romadonde se enfrentará a algunos de los asesinos más letales del mundo."  
                                Foreground="White" TextWrapping="Wrap" HorizontalAlignment="Left" />
-                    </StackPanel>
+                        </StackPanel>
+                    </Border>
+
                 </Grid>
-                
+
                 <StackPanel Grid.Row="1">
-                    <TextBlock  Text="actor 1" FontSize="40" FontWeight="Bold" Foreground="Black"/>
-                    <TextBlock  Text="actor 1" FontSize="40" FontWeight="Bold" Foreground="Black"/>
-                    <TextBlock  Text="actor 1" FontSize="40" FontWeight="Bold" Foreground="Black"/>
-                    <TextBlock  Text="actor 1" FontSize="40" FontWeight="Bold" Foreground="Black"/>
-                    <TextBlock  Text="actor 1" FontSize="40" FontWeight="Bold" Foreground="Black"/>
-                    <TextBlock  Text="actor 1" FontSize="40" FontWeight="Bold" Foreground="Black"/>
-                    <TextBlock  Text="actor 1" FontSize="40" FontWeight="Bold" Foreground="Black"/>
+                    <!-- DIRECCION-->
+                    <TextBlock  Text="DIRECCIÓN" FontSize="40" FontWeight="Bold" Foreground="Black" Margin="20,10,0,10" HorizontalAlignment="Left"/>
+                    <Grid>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="33*"/>
+                            <ColumnDefinition Width="33*"/>
+                            <ColumnDefinition Width="33*"/>
+                        </Grid.ColumnDefinitions>
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="250"/>
+                        </Grid.RowDefinitions>
+                        
+                        <!-- DIRECTOR 1-->
+                        <Border CornerRadius="10" Grid.Column="0" Margin="20,0,20,0" VerticalAlignment="Bottom" Background="#99000000">
+                            <WrapPanel>
+                                <Image Source="https://upload.wikimedia.org/wikipedia/commons/4/46/Leonardo_Dicaprio_Cannes_2019.jpg"   Stretch="Uniform"/>
+                                <StackPanel>
+                                    <TextBlock Text="NOMBRE" Foreground="White" Margin="10,5,10,10" FontWeight="Bold"/>
+                                    <TextBlock Text="rollo"  Foreground="White" Margin="10,5,10,10"/>
+                                </StackPanel>
+                            </WrapPanel>
+                        </Border>
+                        <!-- DIRECTOR 3-->
+                        <Border CornerRadius="10" Grid.Column="1" Margin="20,0,20,0" VerticalAlignment="Bottom" Background="#99000000">
+                            <WrapPanel>
+                                <Image Source="https://upload.wikimedia.org/wikipedia/commons/4/46/Leonardo_Dicaprio_Cannes_2019.jpg"   Stretch="Uniform"/>
+                                <StackPanel>
+                                    <TextBlock Text="NOMBRE" Foreground="White" Margin="10,5,10,10" FontWeight="Bold"/>
+                                    <TextBlock Text="rollo"  Foreground="White" Margin="10,5,10,10"/>
+                                </StackPanel>
+                            </WrapPanel>
+                        </Border>
+                        <!-- DIRECTOR 3-->
+                        <Border CornerRadius="10" Grid.Column="2" Margin="20,0,20,0" VerticalAlignment="Bottom" Background="#99000000">
+                            <WrapPanel>
+                                <Image Source="https://upload.wikimedia.org/wikipedia/commons/4/46/Leonardo_Dicaprio_Cannes_2019.jpg"   Stretch="Uniform"/>
+                                <StackPanel>
+                                    <TextBlock Text="NOMBRE" Foreground="White" Margin="10,5,10,10" FontWeight="Bold"/>
+                                    <TextBlock Text="rollo"  Foreground="White" Margin="10,5,10,10"/>
+                                </StackPanel>
+                            </WrapPanel>
+                        </Border>
+                    </Grid>
+                    <!-- REPARTO-->
+                    <TextBlock  Text="REPARTO" FontSize="40" FontWeight="Bold" Foreground="Black" Margin="20,10,0,10" HorizontalAlignment="Left"/>
+                    <Grid>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="33*"/>
+                            <ColumnDefinition Width="33*"/>
+                            <ColumnDefinition Width="33*"/>
+                        </Grid.ColumnDefinitions>
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="250"/>
+                        </Grid.RowDefinitions>
+                        <!-- ACTOR 1-->
+                        <Border CornerRadius="10" Grid.Column="0" Margin="20,0,20,0" VerticalAlignment="Bottom" Background="#99000000">
+                            <WrapPanel>
+                                <Image Source="https://upload.wikimedia.org/wikipedia/commons/4/46/Leonardo_Dicaprio_Cannes_2019.jpg"   Stretch="Uniform"/>
+                                <StackPanel>
+                                    <TextBlock Text="NOMBRE" Foreground="White" FontWeight="Bold"/>
+                                    <TextBlock Text="rollo"  Foreground="White"/>
+                                </StackPanel>
+                            </WrapPanel>
+                        </Border>
+                        <!-- ACTOR 2-->
+                        <Border CornerRadius="10" Grid.Column="1" Margin="20,0,20,0" VerticalAlignment="Bottom" Background="#99000000">
+                            <WrapPanel>
+                                <Image Source="https://upload.wikimedia.org/wikipedia/commons/4/46/Leonardo_Dicaprio_Cannes_2019.jpg"   Stretch="Uniform"/>
+                                <StackPanel>
+                                    <TextBlock Text="NOMBRE" Foreground="White" FontWeight="Bold"/>
+                                    <TextBlock Text="rollo"  Foreground="White"/>
+                                </StackPanel>
+                            </WrapPanel>
+                        </Border>
+                        <!-- ACTOR 3-->
+                        <Border CornerRadius="10" Grid.Column="2" Margin="20,0,20,0" VerticalAlignment="Bottom" Background="#99000000">
+                            <WrapPanel>
+                                <Image Source="https://upload.wikimedia.org/wikipedia/commons/4/46/Leonardo_Dicaprio_Cannes_2019.jpg"   Stretch="Uniform"/>
+                                <StackPanel>
+                                    <TextBlock Text="NOMBRE" Foreground="White" FontWeight="Bold"/>
+                                    <TextBlock Text="rollo"  Foreground="White"/>
+                                </StackPanel>
+                            </WrapPanel>
+                        </Border>
+                    </Grid>
+
                 </StackPanel>
             </Grid>
 
